for version 4.next
    - Fix disabling balloon title changes menu option.
    - Ignore docked windows and continue looking when matching command by name.
    - Bash completion
    - Italian Translation thanks to Alessio Cassibba
    - Change behavior of tray activation. Raise window when not active, and
      iconify when active.

for version 4.1
    - Fix bug 431297: Fall back to window title and class name when launching if
      pid becomes invalid. Allows commands that detach and get a new pid (rox)
      to dock correctly.
    - New command line option -n: Specify the string to use for fall back when
      launching a command and a pid match cannot be determined.
    - New command line option -y: Force matching command by title and class
      name.
    - New command line option -x: Specify PID of application to dock.
    - Fix a bug that prevented the time out for trying to dock and launched
      command from increasing.
    - Menu item for setting the tray icon.
    - Fix bug: Do not quit when closing docked application from tray menu.

for version 4.0
    - 4.0 rewrite complete.

for version 4.0-preview-1
    - Preview release of Qt 4 port.

for version 1.3
    - Fix bug when reading back balloon timeout on session restoration
    - AutoLaunch enhancement (Request user to provide program name when
      autodetection failed)
    - Indonesian translations from Eko Prasetiyo
    - Italian translations from Alessio Cassibba
    - Updated Brazilian Portuguese and polish translations

for version 1.2
    - Polish translations from KonMan
    - Check WM_NAME to support programs like LimeWire (for lavacube)
    - Store entire application path as part of session
    - Move around command line handling code
    - Configure balloon timeout using "-p" (for roopesh)

for version 1.1
    - German translations from Thomas Runge
    - Dialog detection bug. I replaced all LOG with TRACE (Thanks to Novoselic
      who raised a question which helped me notice it)