@@ -79,7 +79,6 @@ public slots:
 private slots:
     void toggleWindow();
     void trayActivated(QSystemTrayIcon::ActivationReason reason = QSystemTrayIcon::Trigger);
-    void showOnAllDesktops();
     void doAbout();
     void doSelectAnother();
     void doUndock();
