@@ -5,6 +5,8 @@ for version 4.next
     - Italian Translation thanks to Alessio Cassibba
     - Change behavior of tray activation. Raise window when not active, and
       iconify when active.
+    - Change to the desktop the window was last on when restoring. Only works
+      with WMs that support _NET_CURRENT_DESKTOP.
 
 for version 4.1
     - Fix bug 431297: Fall back to window title and class name when launching if
